Patch 0.1
    4/28/19
        - Added All Mass items to cfgspawnabletypes.xml
Patch 0.2
    5/2/19
        - Added Custom Military Zone in Zelenogorsk Military (Still needs work)
    5/4/19
        - Reworking Catagory Loot (Added MilitaryWeapons, MilitaryClothing, MilitaryAccessories) to cfglimitsdefinition.xml
        - Added "Military" UsageFlag for overall Military loot spawn area (Custom military zones)